--- a/0facebook-pages.html
+++ b/0facebook-pages.html
@@ -217,10 +217,10 @@ class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/politiciinutili/
 data-tabs="" data-width="2400" data-height="300" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false"><blockquote 
 cite="https://www.facebook.com/pg/I-politici-fanno-schifo-e-le-proteste-del-popolo-quando-lo-capisce-107496790697922/" 
 class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/pg/I-politici-fanno-schifo-e-le-proteste-del-popolo-quando-lo-capisce-107496790697922/">I politici fanno schifo e le proteste del popolo quando lo capisce</a></blockquote></div>
-<div class="fb-page" data-href="https://www.facebook.com/Democrazia-indiretta-politici-internazionali-si-stringono-mani-113956616695691/" 
+<div class="fb-page" data-href="https://www.facebook.com/Democrazia-indiretta-la-politica-internazionale-e-inutile-113956616695691/" 
 data-tabs="" data-width="2400" data-height="300" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false"><blockquote 
-cite="https://www.facebook.com/Democrazia-indiretta-politici-internazionali-si-stringono-mani-113956616695691/" 
-class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/Democrazia-indiretta-politici-internazionali-si-stringono-mani-113956616695691/">Democrazia indiretta - politici internazionali si stringono mani</a></blockquote></div>
+cite="https://www.facebook.com/Democrazia-indiretta-la-politica-internazionale-e-inutile-113956616695691/" 
+class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/Democrazia-indiretta-la-politica-internazionale-e-inutile-113956616695691/">Democrazia indiretta - la politica internazionale e' inutile</a></blockquote></div>
 <div class="fb-page" data-href="https://www.facebook.com/I-politici-si-criticano-giustamente-a-vicenda-113431226712859/" 
 data-tabs="" data-width="2400" data-height="300" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false"><blockquote 
 cite="https://www.facebook.com/I-politici-si-criticano-giustamente-a-vicenda-113431226712859/" 
