--- a/8.teorie.realta.test.terrapiatta.html
+++ b/8.teorie.realta.test.terrapiatta.html
@@ -195,6 +195,7 @@ terrapiattisti step2
 				TESI dopo 6 mesi dovrebbe scopriremmo che mezzo giorno arriverebbe a mezzanotte (minuto 13)
 			<a id=dinotinellistelle>video484 Il modello Terrapiatta non puo' spiegare le posizioni delle stelle: falsificato</a>
 			<iframe width="560" height="315" src="https://www.youtube.com/embed/r_ZnLnmwr5E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/LuETWe1ZdsY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		6 Gianni Zurlo
 			fonte bibbia versione biglino (eloim...)
 			https://youtu.be/dg2vZ3CiOB8
@@ -300,6 +301,7 @@ terrapiattisti step2
 			<iframe width="560" height="315" src="https://www.youtube.com/embed/kPbyMi7Yzpo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		9 anderAle  x rasPi Ricerca Indipendente Terra Piatta https://www.youtube.com/user/Lumeddux21
 		<a id=9>video484 La terrapiatta esiste solo nella testa dei terrapiattisti: i conti di R.I.T.P</a>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/spFAuJS7BTI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			<iframe width="560" height="315" src="https://www.youtube.com/embed/TPujRhA1nSw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			<iframe width="560" height="315" src="https://www.youtube.com/embed/fjt2C0OXBt8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			rifrazione, il gradiente termico verticale, la curvatura terrestre e molto altro
@@ -341,6 +343,9 @@ terrapiattisti step2
 		2esperimento
 		
 		1esperimento (guarda il mare, ).
+		<a id=9>video484 I Falsi esperimenti dei terrapiattisti: Dino Tinelli e John D</a>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/7FwuAwtBXk4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		
 		<a id=10>video484 Obiettivo sanita' mentale terrapiattisti: aggiornamenti paziente RICERCA TERRA PIATTA</a>
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/oeT912ggfp4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		10 Earth measure- ex testimone di geova
