--- a/0facebook-pages.html
+++ b/0facebook-pages.html
@@ -20,7 +20,9 @@ class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/bianconiglio1235
 
 
 
-
+video 
+	youtube linear (mix, ma si spargono a ragnatela)
+	facebook (cartelle, poche persone e no condivisioni) 
 
 
 <div class="fb-page" data-href="https://www.facebook.com/Le-rane-di-Dexter-1275085739324808/" 
