--- a/0facebook-pages.html
+++ b/0facebook-pages.html
@@ -21,6 +21,8 @@ class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/bianconiglio1235
 
 
 video 
+	contenuti (durata, leggeri (tante persone) vs pesanti (poche persone), )
+	
 	youtube linear (mix, ma si spargono a ragnatela)
 	facebook (cartelle, poche persone e no condivisioni) 
 
