--- a/0facebook-pages.html
+++ b/0facebook-pages.html
@@ -11,7 +11,7 @@
 <div class="g-ytsubscribe" data-channel="marcoka2003" data-layout="full" data-theme="dark" data-count="default"></div>
 
 <pre>
-
+	
 
 <div class="fb-page" data-href="https://www.facebook.com/bianconiglio1235/" 
 data-tabs="" data-width="2400" data-height="300" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false"><blockquote 
@@ -21,7 +21,7 @@ class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/bianconiglio1235
 
 
 video 
-	contenuti (durata, leggeri (tante persone) vs pesanti (poche persone), )
+	contenuti (durata il piu corti possibili, leggeri (tante persone) vs pesanti (poche persone), )
 	
 	youtube linear (mix, ma si spargono a ragnatela)
 	facebook (cartelle, poche persone e no condivisioni) 
