--- a/comicita-lundini.html
+++ b/comicita-lundini.html
@@ -55,6 +55,9 @@ mix elementi televisivi
 	autoreferenzialita solo commenti positivi
 		ospite min goccia nell oceano #benedetta rossi
 		odifreddi1-50
+	serie televisione
+		continuano -associazione stupido non finiscono #minoli
+		quando vanno in onda
 	
 	
 minimizzare un max
@@ -110,6 +113,10 @@ elementi a testa in giu (reali
 		min chiuso - massimizzare stream tv grande intrattenimento, tenete logo
 	internet - ricerce sul web keywords - vengono fuori strane #sketchilvideovirale
 	rabbia interruzioni max - min importanza vedere video #sketchilvideovirale
+	sx
+		testa in giu (ragazza di amico min) - assurdo max naomi cambell #5
+		
+		
 linguistiche freddure
 	calciatore - cacciatore #giordanobruno
 	porta venezia - milano (casuale miss keta ) #3 
@@ -118,12 +125,18 @@ linguistiche freddure
 	manovra di hemlich - assurdo famoso #4
 		- ( flirta) 
 		- ammiratore （ x mia moglie max soffoca)
+	venire dalla strada (modo dire astratto )- concreto min da quale
+	
 --------
 geniale - associazioni nuove 
 -------------
 
 
 		
+<a id=5>video464 Analisi comicita' di Valerio Lundini: a letto con Naomi Campbell</a>
+https://www.youtube.com/watch?v=fNXUeb7tKuo
+
+
 <a id=4>video464 Analisi comicita' di Valerio Lundini: manovra di Heimlich</a>
 https://www.youtube.com/watch?v=aBWeH4CRGx0
 <iframe width="560" height="315" src="https://www.youtube.com/embed/bjDMRxz8ppg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
